# proxydetox

./: .bazelrc  .gitignore  BUILD  BUILD.md  Cargo.toml  INSTALL.md  LICENSE.txt  MODULE.bazel  Makefile  README.md  WORKSPACE  book.toml  deno.json  release-please-config.json  renovate.json
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/rust-musl/: Dockerfile  README.md  entrypoint.sh
.github/workflows/: bump_version.yaml  main.yaml  main.yml  pages.yaml  release-please.yaml  release.yaml  renovate.yaml
bazel/: BUILD  http.bzl  pkg.bzl  pkgbuild.bzl  pkgbuild.py
cargo/: .gitattributes  BUILD  crates.bzl
cargo/remote/: BUILD.ansi_term-0.12.1.bazel  BUILD.argh-0.1.5.bazel  BUILD.argh-0.1.6.bazel  BUILD.argh-0.1.7.bazel  BUILD.argh_derive-0.1.5.bazel  BUILD.argh_derive-0.1.6.bazel  BUILD.argh_derive-0.1.7.bazel  BUILD.argh_shared-0.1.5.bazel  BUILD.argh_shared-0.1.6.bazel  BUILD.argh_shared-0.1.7.bazel  BUILD.atty-0.2.14.bazel  BUILD.bindgen-0.55.1.bazel  BUILD.bindgen-0.59.1.bazel  BUILD.bindgen-0.59.2.bazel  BUILD.cc-1.0.69.bazel  BUILD.cc-1.0.71.bazel  BUILD.cexpr-0.4.0.bazel  BUILD.cexpr-0.5.0.bazel  BUILD.cexpr-0.6.0.bazel  BUILD.chrono-0.4.19.bazel  BUILD.clang-sys-1.2.0.bazel  BUILD.clang-sys-1.2.2.bazel  BUILD.clang-sys-1.3.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.clap-2.34.0.bazel  BUILD.clap-3.0.0.bazel  BUILD.const-sha1-0.2.0.bazel  BUILD.core-foundation-0.9.2.bazel  BUILD.dirs-3.0.2.bazel  BUILD.dirs-4.0.0.bazel  BUILD.dirs-sys-0.3.6.bazel  BUILD.dns-parser-0.8.0.bazel  BUILD.env_logger-0.7.1.bazel  BUILD.futures-0.3.16.bazel  BUILD.futures-0.3.19.bazel  BUILD.futures-channel-0.3.16.bazel  BUILD.futures-channel-0.3.19.bazel  BUILD.futures-core-0.3.16.bazel  BUILD.futures-core-0.3.19.bazel  BUILD.futures-executor-0.3.16.bazel  (+156 more)
cproxydetox/: BUILD  Cargo.toml  proxydetox.modulemap
cproxydetox/cargo/: BUILD.bazel
cproxydetox/src/: lib.rs  proxydetox.h
debian/: control  proxydetox.service  proxydetox.socket
detox_auth/: BUILD  Cargo.toml
detox_auth/src/: lib.rs  negotiate.rs  netrc.rs
detox_futures/: BUILD  Cargo.toml
detox_futures/src/: lib.rs
detox_hyper/: BUILD  Cargo.toml
detox_hyper/src/: conn.rs  http.rs  lib.rs
detox_net/: BUILD  Cargo.toml
detox_net/src/: host_and_port.rs  io.rs  keepalive.rs  lib.rs  metered.rs  path_or_uri.rs  stream.rs
dnsdetox/: Cargo.toml  README.md
dnsdetox/src/: dns.rs  doh.rs  error.rs  lib.rs  main.rs  options.rs
doc/: BUILD  SUMMARY.md  alternatives.md  build.md  cliref.md  configuration.md  cross_compile.md  developers.md  installation.md  introduction.md  launchctl.sh  macos.md  service.md  transparent_proxy.md  usage.md  windows.md
duktape/: BUILD  Cargo.toml
duktape-sys/: BUILD  Cargo.toml  build.rs
duktape-sys/src/: .gitattributes  .gitignore  Makefile  lib.rs
duktape/cargo/: BUILD.bazel
duktape/src/: context.rs  error.rs  lib.rs  stack.rs  value.rs
libnegotiate/: BUILD  Cargo.toml
libnegotiate/cargo/: BUILD.bazel
libnegotiate/src/: gssapi.rs  lib.rs  sspi.rs
libsspi/: BUILD  Cargo.toml  build.rs
libsspi/cargo/: BUILD.bazel
libsspi/src/: lib.rs  win.rs
macos/app/: AppDelegate.swift  BUILD  Info.plist  InternalNetworkController.swift  Preferences.swift  ProxydetoxApp.swift  ProxydetoxControl.swift  StatusItemController.swift
macos/launcher/: AppDelegate.swift  BUILD
paceval/: BUILD  Cargo.toml  example.pac
paceval/cargo/: BUILD.bazel
paceval/src/: main.rs
paclib/: BUILD  Cargo.toml
paclib/cargo/: BUILD.bazel
paclib/src/: .gitattributes  dns.rs  domain.rs  engine.rs  evaluator.rs  lib.rs  pac_utils.js  proxy.rs
paclib/tests/: pac_utils.rs
pkg/: BUILD  README.md  com.github.kiron1.proxydetox.plist  copy.sh  proxydetox.service
pkg/deb/: BUILD  postinst  postrm  proxydetox.service
pkg/macos/: 40-proxydetox  BUILD  cc.colorto.proxydetox.plist  com.github.kiron1.proxydetox.plist  postinstall  preinstall  proxydetoxctl  setproxy.swift
pkg/windows/: BUILD  install.bat  startup.reg
pkg/zip/: BUILD  install.bat
proxy_client/: BUILD  Cargo.toml
proxy_client/cargo/: BUILD.bazel
proxy_client/src/: http_connect_connector.rs  http_connect_stream.rs  http_proxy_connector.rs  http_proxy_stream.rs  lib.rs  stream.rs
proxydetox/: BUILD  Cargo.toml  build.rs
proxydetox/cargo/: BUILD.bazel
proxydetox/src/: 502.html  accesslog.rs  auth.rs  client.rs  connect.rs  detox.rs  idle_timeout.rs  io.rs  lib.rs  limit.rs  main.rs  net.rs  options.rs  proxy_stream.rs  service.rs  session.rs  socket.rs
proxydetox/src/auth/: gssapi.rs  kerberos.rs  netrc.rs  sspi.rs
proxydetox/src/client/: direct.rs  http_proxy_connector.rs  http_proxy_stream.rs  proxy.rs
proxydetox/src/detox/: config.rs  service.rs  session.rs
proxydetox/src/session/: builder.rs  peer.rs  shared.rs
proxydetox/tests/: connect_direct.rs  connect_proxy.rs  http_api.rs  http_direct.rs  http_proxy.rs  net.rs
proxydetox/tests/environment/: httpd.rs  mod.rs  tcp.rs
proxydetoxlib/: BUILD  Cargo.toml  build.rs
proxydetoxlib/src/: accesslog.html  accesslog.rs  auth.rs  client.rs  connect.rs  context.rs  error.html  lib.rs  net.rs  server.rs  session.rs  socket.rs
proxydetoxlib/src/auth/: negotiate.rs  netrc.rs
proxydetoxlib/src/client/: direct.rs  proxy.rs
proxydetoxlib/src/context/: builder.rs
proxydetoxlib/src/session/: builder.rs  peer.rs  shared.rs
proxydetoxlib/tests/: connect_direct.rs  connect_proxy.rs  http_api.rs  http_direct.rs  http_proxy.rs  net.rs
proxydetoxlib/tests/environment/: httpd.rs  mod.rs  tcp.rs
spnego/: BUILD  Cargo.toml
spnego/src/: gssapi.rs  lib.rs  sspi.rs
src/: 500.html  502.html  auth.rs  client.rs  detox.rs  io.rs  limit.rs  main.rs  net.rs
src/auth/: basic.rs  gssapi.rs  negotiate.rs  netrc.rs
src/client/: http_proxy_connector.rs  http_proxy_stream.rs
src/detox/: config.rs  service.rs  session.rs
tools/: BUILD  Cargo.toml  coverage.sh  mkdeb.sh  mkpkg  mkpkg.sh  mkzip.ps1  publish-gh-pages  repin  toml_get.rs  version
www/: BUILD  CNAME  copy.sh  index.html
(+1 files in other folders)
