[workspace]
members = [
    "detox_net",
    "dnsdetox",
    "paceval",
    "paclib",
    "proxy_client",
    "proxydetox",
    "proxydetoxlib",
    "spnego",
]
default-members = [
    "detox_net",
    "paceval",
    "paclib",
    "proxy_client",
    "proxydetox",
    "proxydetoxlib",
    "spnego",
]
