[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"
strip = true

[workspace]
resolver = "2"
members = [
    "detox_auth",
    "detox_futures",
    "detox_hyper",
    "detox_net",
    "dnsdetox",
    "paceval",
    "paclib",
    "proxydetox",
    "proxydetoxlib",
    "spnego",
    "tools",
]
default-members = [
    "paceval",
    "proxydetox",
]
exclude = ["tools"]

[workspace.package]
version = "0.11.2"
edition = "2021"
homepage = "https://proxydetox.colorto.cc/"

[workspace.dependencies]
base64 = "0.22"
boa_engine = { version = "0.20", features = ["annex-b"] }
boa_gc = "0.20"
bytes = "1.1"
chrono = "0.4"
clap = { version = "4.1", features = ["derive", "env"] }
default-net = { version = "0.22" }
detox_auth = { path = "detox_auth" }
detox_futures = { path = "detox_futures" }
detox_hyper = { path = "detox_hyper" }
detox_net = { path = "detox_net" }
dirs = "6.0"
futures-util = { version = "0.3", features = [ "alloc" ], default-features = false }
gc = { version = "0.5", features = ["derive"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
lazy_static = "1.4"
libc = "0.2"
netrc = { version = "0.4" }
paclib = { path = "paclib" }
pin-project = "1"
proxydetoxlib = { path = "proxydetoxlib" }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
socket2 = { version = "0.5", features = ["all"] }
spnego = { path = "spnego" }
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "net", "macros", "sync", "signal"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
