[package]
name = "cproxydetox"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/kiron1/proxydetox"

[features]
negotiate = ["proxydetox/negotiate"]

[lib]
crate-type = ["staticlib"]

[dependencies]
dirs = "4.0"
libc = "0.2"
proxydetox = { path = "../proxydetox" }
tokio = { version = "1", features = ["rt-multi-thread"] }
