[package]
name = "cproxydetox"
version = "0.1.0"
edition = "2021"
homepage = "https://proxydetox.colorto.cc/"

[features]
negotiate = ["proxydetoxlib/negotiate"]

[lib]
crate-type = ["staticlib"]
doctest = false

[dependencies]
dirs = "4.0"
libc = "0.2"
proxydetoxlib = { path = "../proxydetoxlib" }
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1",  "http2", "client", "server", "tcp"] }
