[package]
name = "dnsdetox"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
dirs.workspace = true
dns-parser = "0.8"
env_logger = "0.10"
futures-util.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
log = "0.4"
paclib.workspace = true
proxy_client.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[lib]
doctest = false
