[package]
name = "dnsdetox"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
detox_auth.workspace = true
detox_hyper.workspace = true
detox_net.workspace = true
dirs.workspace = true
dns-parser = "0.8"
env_logger = "0.11"
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
log = "0.4"
paclib.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[lib]
doctest = false
