[package]
name = "libsspi"
version = "0.1.0"
authors = ["kiron1 <kiron1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows = { version = "0.29", features = ["std", "Win32_Foundation", "Win32_Security_Authentication_Identity", "Win32_Security_Credentials"] }
