[package]
name = "paclib"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = "0.17"
boa_gc = "0.17"
default-net = { version = "0.17" }
detox_net = { path = "../detox_net" }
gc = { version = "0.5", features = ["derive"] }
http = "0.2"
lazy_static = "1.4"
regex = "1.5"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[lib]
doctest = false
