[package]
name = "paclib"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine.workspace = true
boa_gc.workspace = true
default-net.workspace = true
detox_net.workspace = true
gc.workspace = true
http.workspace = true
lazy_static.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lib]
doctest = false
