[package]
name = "proxy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server", "tcp"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
thiserror = "1.0"

[lib]
doctest = false
