[package]
name = "proxy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detox_net = { path = "../detox_net" }
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server", "tcp"] }
hyper-rustls = "0.24"
paclib = { path = "../paclib" }
rustls = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-rustls = "0.24"
thiserror = "1.0"
tower = { version = "0.4", features = ["util"] }

[lib]
doctest = false
