[package]
name = "proxy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detox_net.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
paclib.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
thiserror.workspace = true
tower.workspace = true

[lib]
doctest = false
