[package]
name = "proxydetox"
version.workspace = true
edition = "2021"
homepage.workspace = true

[features]
default = ["negotiate"]
negotiate = ["proxydetoxlib/negotiate"]

[dependencies]
clap.workspace = true
detox_net.workspace = true
dirs.workspace = true
futures-util.workspace = true
http.workspace = true
hyper.workspace = true
lazy_static.workspace = true
proxydetoxlib.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls.workspace = true
