[package]
name = "proxydetox"
version.workspace = true
edition = "2024"
homepage.workspace = true

[features]
default = ["negotiate"]
negotiate = ["detox_auth/negotiate", "proxydetoxlib/negotiate"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(static_library)'] }

[dependencies]
clap.workspace = true
detox_auth.workspace = true
default-net.workspace = true
detox_net.workspace = true
dirs.workspace = true
futures-util.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
lazy_static.workspace = true
proxydetoxlib.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System",
    "Win32_System_Console",
] }
