[package]
name = "proxydetoxlib"
version = "0.7.2"
edition = "2021"
homepage = "https://proxydetox.colorto.cc/"

[features]
default = ["negotiate"]
negotiate = ["dep:spnego"]

[dependencies]
base64 = "0.21"
bytes = "1.1"
chrono = "0.4"
detox_net = { path = "../detox_net" }
dirs = "5.0"
futures-util = { version = "0.3", default-features = false }
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "server", "stream", "tcp"] }
hyper-rustls = "0.24"
lazy_static = "1.4"
libc = "0.2"
spnego = { path = "../spnego", optional = true }
netrc = { version = "0.4" }
paclib = { path = "../paclib" }
proxy_client = { path = "../proxy_client" }
rustls = "0.21"
rustls-pemfile = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "signal"] }
tokio-rustls =  "0.24"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
rustls-native-certs = "0.6"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
doctest = false
