[package]
name = "proxydetoxlib"
version = "0.7.3"
edition = "2021"
homepage = "https://proxydetox.colorto.cc/"

[features]
default = ["negotiate"]
negotiate = ["dep:spnego"]

[dependencies]
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
detox_net.workspace = true
dirs.workspace = true
futures-util.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
lazy_static.workspace = true
libc.workspace = true
spnego = { workspace = true, optional = true }
netrc.workspace = true
paclib.workspace = true
proxy_client.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-futures.workspace = true
rustls-native-certs.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lib]
doctest = false
