[package]
name = "proxydetoxlib"
version.workspace = true
edition = "2021"
homepage.workspace = true

[features]
default = ["negotiate"]
negotiate = ["detox_auth/negotiate"]

[dependencies]
bytes.workspace = true
chrono.workspace = true
detox_auth = { workspace = true, optional = true }
detox_futures.workspace = true
detox_hyper.workspace = true
detox_net.workspace = true
dirs.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
lazy_static.workspace = true
libc.workspace = true
paclib.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true
tracing-futures.workspace = true
rustls-native-certs.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lib]
doctest = false
