[package]
name = "spnego"
version = "0.6.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libgssapi = { version = "0.9", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
] }

[lib]
doctest = false
